# gkrellm

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  mem.c
